@@ -31,7 +31,7 @@ public enum DestinationType {
 	FTP("FTP"), SFTP("SFTP"), NetworkShare("Network Share"),
 	S3jclouds("Amazon S3 - jclouds"), S3AwsSdk("Amazon S3 - AWS SDK"),
 	Azure("Microsoft Azure"), GoogleCloudStorage("Google Cloud Storage"),
-	WebDav("WebDAV"), Website("Website");
+	WebDav("WebDAV"), Website("Website"), B2Synapticloop("Backblaze B2 - Synapticloop");
 
 	private final String value;
 
