@@ -1,5 +1,6 @@
 ART 3.11
 * Allow different report access for different public users
+* Added Backblaze B2 destination type
 
 ART 3.10
 * Provide edit report link from select parameters page
